--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@600&family=Poppins:wght@200&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: lighter;
+    font-family: 'Poppins', sans-serif;
+}
+
+:root {
+    nverde: #b5e667;
+    nblanco: #ffffea;
 }
 
 ul {
@@ -28,6 +34,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    z-index: 1000;
 }
 
 .header div{
@@ -35,13 +43,13 @@ body {
 }
 
 .header h1 {
-    color: rgb(181, 230, 103);
+    color: rgb(138, 196, 45);
 }
 
 /* HERO SECTION-----------------------------------------------------------*/
 .hero{
     margin-top: 10vh;
-    height: 50vh;
+    height: 60vh;
     background-color: rgb(135, 196, 66);
     background-size: cover;
     background-image: url(/pics/hero-bg-banner.jpg);
@@ -74,13 +82,13 @@ main {
 .hero-container h3 {
     font-size: 30px;
     font-weight: lighter;
-    margin-bottom: 3vh;
+    margin-bottom: 5vh;
 }
 
 .hero-container p {
     text-align: center;
 
-    font-size: 25px;
+    font-size: 20px;
     padding: 15px 0;
 
 }
@@ -88,33 +96,66 @@ main {
 
 /* POPULARES SECTION -----------------------------------------------------*/
 .section-populares {
-    background-color:rgb(135, 196, 66);
+    background-color:rgb(255, 255, 234);
     margin: 5vh 10vh;
     padding:2vh;
 
     height: 60vh;
+
+    border-radius: 10px;
+}
+
+.section-populares h1 {
+    color: rgb(138, 196, 45);
+    margin-bottom: 2px;
+}
+
+.populares-slider {
+    height: 95%;
+    width: 100%;
+    background-color: rgb(138, 196, 45);
+    border: 3px solid rgb(138, 196, 45);
+    overflow: hidden; 
+    border-radius: 10px;
+}
+
+.populares-slider ul {
+    display: flex;
+    width: 200%;
+    overflow: hidden;
+    background-color: rgb(138, 196, 45);
+    animation: slide 10s infinite ease-in-out;
 }
 
 
+.populares-slider li {
+    width: 50%;
+    margin: 10px;
+}
 
-.populares-container {
-    margin-top: 2vh;
-    height: 50vh;
+.populares-slider img {
+    width: 100%;
+    border-radius: 5px;
+}
 
-    background-color: rgb(158, 192, 119);
+
+@keyframes slide {
+    0% { transform: translateX(0%); }
+    90% { transform: translateX(-50%); }
+
 }
 
 
 /* RECETAS SECTION-------------------------------------------------------*/
 
 .section-recetas {
-    background-color:rgb(135, 196, 66);
+    background-color:rgb(255, 255, 234);
     margin: 5vh 10vh;
-    padding:2vh;
+    padding:1vh 2vh 4vh;
 
     height: 90vh;
     display: flex;
-
+    border-radius:10px;
 }
 
 
@@ -122,23 +163,109 @@ main {
 .recomendadas {
     width: 65%;
     margin-right: 10vh;
+    
+}
+
+.recomendadas h2 {
+    color:rgb(138, 196, 45);
 }
 
 .recomendadas-container {
     margin-top: 2vh;
     height: 95%;
 
-    background-color: rgb(158, 192, 119);
+    background-color: rgb(138, 196, 45);
+    padding: 10px 20px;
+    border-radius:10px;
 }
+
+.recomendadas-container ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.recomendadas-container li {
+    list-style: none;
+    margin-top: 1vh;
+}
+
+.recomendadas-container img {
+    max-width: 90%;
+    height: auto;
+    display: block;
+
+    border-radius:5px;
+}
+
+.recomendadas-container img:hover {
+    transform: scale(1.2);
+    transition: transform 0.5s ;
+}
+
+
+
+
+/*RECIENTES----------------------------------------------*/
+
+
 
 
 .recientes {
     width: 30%;
+
+    border-radius:10px;
 }
 
+.recientes h2 {
+    color:rgb(138, 196, 45);
+}
 .recientes-container{
     margin-top: 2vh;
     height: 95%;
 
-    background-color: rgb(158, 192, 119);
+    background-color: rgb(138, 196, 45);
+    border-radius:10px;
+}
+
+.recientes-container a {
+    text-decoration: none;
+}
+
+
+.recientes-container {
+    overflow: scroll;
+}
+
+.recientes-container li {
+    padding: 10px;
+    display: flex;
+    align-items:center;
+}
+
+.item-container {
+    display: flex; /* Utiliza flexbox para los elementos dentro de .item-container */
+    align-items: center; /* Alinea los elementos verticalmente al centro */
+}
+
+.content-container {
+    display: flex; /* Utiliza flexbox para los elementos dentro de .content-container */
+    align-items: center; /* Alinea los elementos verticalmente al centro */
+}
+
+.content-container img{
+    margin-right: 10px;
+    border-radius:5px;
+    max-width: 30%;
+
+    float: left;
+}
+
+.content-container h3{
+    padding: 25px;
+}
+
+.item-container:hover{
+    background-color: rgb(111, 155, 39);
+    border-radius:10px;
 }
