--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ ul {
 }
 
 body {
-    background-image: url(/pics/body-bg.jpg);
+    background-image: url(./pics/body-bg.jpg);
     background-position: center center;
     color: white;
     scrollbar-width: thin;
@@ -143,7 +143,7 @@ body {
     height: 60vh;
     background-color: rgb(135, 196, 66);
     background-size: cover;
-    background-image: url(/pics/hero-bg-banner.jpg);
+    background-image: url(./pics/hero-bg-banner.jpg);
 }
 
 .hero-container { 
