--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,6 +237,7 @@ main {
 
 .populares-slider img {
     width: 100%;
+    height: 330px;
     border-radius: 5px;
 }
 
@@ -308,8 +309,8 @@ main {
 }
 
 .recomendadas-container img {
-    max-width: 90%;
-    height: auto;
+    max-width: 230px;
+    height: 155px;
     display: block;
 
     border-radius:5px;
@@ -320,9 +321,11 @@ main {
     transition: transform 0.5s ;
     border: 1px solid rgb(255, 255, 234);
 }
+ 
 
-
-
+.a-section{
+    padding: 22%;
+}
 
 /*RECIENTES----------------------------------------------*/
 
@@ -352,7 +355,7 @@ main {
 
 
 .recientes-container {
-    padding-top: 25px;
+    padding-top: 100px;
     overflow: scroll;
 }
 
@@ -399,8 +402,34 @@ footer {
     height: 100%;
     background-color:rgb(70, 70, 70);
     border-radius:70px 70px 0 0;
+    
+    
 }
 
 .footer-container div {
-    margin: 0 auto;
+    padding:5vh 15vh ;
+}
+
+.footer-container h3 {
+    
+    font-size: 48px;
+    text-align: center;
+}
+
+.footer-container h3:hover{
+    color:rgb(138, 196, 45);
+}
+
+.info-container ul{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+}
+
+.info-container a{
+    color:white;
+}
+
+.info-container a:hover{
+    color:rgb(95, 164, 255);
 }
